--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,9 @@
 #URLs:
 homePageUrl = http://107.170.213.234/catalog/
+loginPageUrl = http://107.170.213.234/catalog/login.php
+forgottenPasswordUrl = http://107.170.213.234/catalog/password_forgotten.php
+cartContentsUrl = http://107.170.213.234/catalog/shopping_cart.php
+createAccountUrl = http://107.170.213.234/catalog/create_account.php
 browser = chrome
 username = ecalix@test.com
 password = test123
